--- a/test/integration/default.yml
+++ b/test/integration/default.yml
@@ -1,7 +1,22 @@
 - hosts: all
+  pre_tasks:
+    # env COMPRESSION=NONE HBASE_HOME=/usr/local/hbase /usr/local/share/opentsdb/tools/create_table.sh
+    # XXX java.net.InetAddress.getLocalHost throws an exception withyout this
+    - shell: echo "127.0.0.1 localhost {{ ansible_hostname }}" > /etc/hosts
+
   roles:
+    - ansible-role-hbase
     - ansible-role-opentsdb
   vars:
+    hbase_site_xml: |
+      <property>
+        <name>hbase.rootdir</name>
+        <value>file://{{ hbase_db_dir }}</value>
+      </property>
+      <property>
+        <name>hbase.zookeeper.property.dataDir</name>
+        <value>/var/db/zookeeper</value>
+      </property>
     opentsdb_config: |
       tsd.network.bind = 0.0.0.0
       tsd.network.port = 4242
