--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for ansible-role-opentsdb
+
+- name: Restart opentsdb
+  service:
+    name: "{{ opentsdb_service }}"
+    state: restarted
