--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extra_roles/ansible-role-hbase"]
 	path = extra_roles/ansible-role-hbase
-	url = git@github.com:reallyenglish/ansible-role-hbase.git
+	url = https://github.com/reallyenglish/ansible-role-hbase.git
